; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-udp-send-unreachable.c_timer_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-udp-send-unreachable.c_timer_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer = common dso_local global i32 0, align 4
@timer_cb_called = common dso_local global i32 0, align 4
@client = common dso_local global i32 0, align 4
@close_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @timer_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, @timer
  %5 = zext i1 %4 to i32
  %6 = call i32 @ASSERT(i32 %5)
  %7 = load i32, i32* @timer_cb_called, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @timer_cb_called, align 4
  %9 = load i32, i32* @close_cb, align 4
  %10 = call i32 @uv_close(i32* @client, i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* @close_cb, align 4
  %13 = call i32 @uv_close(i32* %11, i32 %12)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
